Develop 2.0.x initial work (#52)
* Implement new subcommands -q, -x (play-song and compile-song)
  * Make use of partFilter for compile-song subcommand.
  * Implement pick-up note sytax: 

* Clean-ups
  * Remove unnecessary files and classes.
  * Clean up pom.xml (remove unnecessary plugin: assembly and make executable generated on package regardless of profile)
  * Update Project.xml to make code style improve alignments
  * Correct a typo in pom..xml
  * Remove PartMeasureParameters from Pattern.
  * Clean up Groove#resolve
  * Clean up internal of PartMeasure
  * Clean up internal Stroke/StrokeSequence structure
  * Clean up exception structure
    * Clean up Exception Context mechanism.
    * Clean up internal Stroke/StrokeSequence structure
    * Clean up context management.

* Add JavaDoc to classes and packages.
  * ExceptionThrower
  * Bar
  * Groove
  * Fraction
  * Add class diagram for 'song' package
  * Add JavaDoc (diagram) for song package
  * And other classes

* Refactorings:
  * Refactor Bar class.
    * Correct parameter names in its methods.
    * Introduce PatternSequence for readability's sake
    * clean up Bar internal and introduce Measure
  * Refactor Stroke.java (Rename it to `PartMeasure`)

* Implement (new) Song class and Measure class 
* Implement Song.Builder#initMeasures
* Introduce JsonUtils.

* Add tests for CLI
* Assertion clean up and measure class design

---------

Co-authored-by: Hiroshi Ukai <dakusui@gamil.com>